--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "logger.h": "c",
-        "form.h": "c"
+        "form.h": "c",
+        "time.h": "c",
+        "libcxl.h": "c",
+        "syslog.h": "c"
     }
 }
